# zebra-label-parser

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  repository.yaml
app/: config.py
app/routers/: labels.py
app/services/: zpl_generator.py
app/static/: app.js
docker/: Dockerfile  cupsd.conf  docker-compose.yml  entrypoint.sh
homeassistant/: DOCS.md  automations.yaml  config.yaml
homeassistant/translations/: en.yaml
tests/: conftest.py  test_api.py  test_image_processor.py  test_label_extractor.py  test_pdf_renderer.py  test_pipeline.py  test_print_service.py  test_zpl_generator.py
zebra-label-printer/: .dockerignore  DOCS.md  Dockerfile  automations.yaml  config.yaml  entrypoint.sh  pyproject.toml
zebra-label-printer/app/: config.py  main.py
zebra-label-printer/app/routers/: health.py  labels.py  printers.py
zebra-label-printer/app/services/: image_processor.py  label_extractor.py  pdf_renderer.py  pipeline.py  print_service.py  zpl_generator.py
zebra-label-printer/app/static/: app.js  index.html  style.css
zebra-label-printer/cups/: setup-virtual-printer.sh  zebra-label-printer.service  zebra-label.ppd  zebrahttp
zebra-label-printer/macos/: install-quick-action.sh
zebra-label-printer/translations/: en.yaml
